# LI_CVAE_3

./: .gitignore  main.py  pyproject.toml
latents/: all_latents.npy
models/: neural_ca.py  vae.py
scripts/: benchmark_fps.py  benchmark_multimodel_fps.py  precompute_latents.py  sample_vae.py  slerp_walk_cv.py  slerp_walk_visualizer.py  train_neural_ca.py  train_vae.py  visualize_ca.py
utils/: ca_data_utils.py  data_utils.py
web/: neural_ca.html
web/slerp_walker/: index.html
